--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
               src="./images/rrectangle711.1.jpg"
               alt="computer"
               width="360"
+              height="300"
             />
           </li>
           <li>
@@ -80,6 +81,7 @@
               src="./images/rrectangle712.2.jpg"
               alt="cellphone"
               width="360"
+              height="300"
             />
           </li>
           <li>
@@ -87,6 +89,7 @@
               src="./images/rrectangle713.3.jpg"
               alt="application on a mobile phone"
               width="360"
+              height="300"
             />
           </li>
         </ul>
@@ -99,12 +102,18 @@
               src="./images/img1.1.jpg"
               alt="photo mark guerrero"
               width="264"
+              height="260"
             />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/img2.1.jpg" alt="photo tom ford" width="264" />
+            <img
+              src="./images/img2.1.jpg"
+              alt="photo tom ford"
+              width="264"
+              width="260"
+            />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
@@ -113,6 +122,7 @@
               src="./images/img3.1.jpg"
               alt="photo camila garcia"
               width="264"
+              height="260"
             />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
@@ -122,6 +132,7 @@
               src="./images/img4.1.jpg"
               alt="photo daniel wilson"
               width="264"
+              height="260"
             />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
