--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               src="./images/img2.1.jpg"
               alt="photo tom ford"
               width="264"
-              width="260"
+              height="260"
             />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
