--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <a href="index.html"><span class="accsent">Web</span>Studio</a>
+        <a href="index.html">web<span>studio</span></a>
 
         <ul>
           <li><a href="">Studio</a></li>
@@ -19,7 +19,7 @@
       </nav>
       <address>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+11(000)111-11-11;">+11 (000) 111-11-11</a>
+        <a href="tel:+110001111111;">+11 (000) 111-11-11</a>
       </address>
     </header>
     <main>
@@ -100,7 +100,7 @@
           <li>
             <img
               src="./images/img1.1.jpg"
-              alt="photo mark guerrero"
+              alt="photo Mark Guerrero"
               width="264"
               height="260"
             />
@@ -110,7 +110,7 @@
           <li>
             <img
               src="./images/img2.1.jpg"
-              alt="photo tom ford"
+              alt="photo Tom Ford"
               width="264"
               height="260"
             />
@@ -120,7 +120,7 @@
           <li>
             <img
               src="./images/img3.1.jpg"
-              alt="photo camila garcia"
+              alt="photo Camila Garcia"
               width="264"
               height="260"
             />
@@ -130,7 +130,7 @@
           <li>
             <img
               src="./images/img4.1.jpg"
-              alt="photo daniel wilson"
+              alt="photo Daniel Wilson"
               width="264"
               height="260"
             />
@@ -141,7 +141,7 @@
       </section>
     </main>
     <footer>
-      <a href="index.html"><span class="accsent">Web</span>Studio</a>
+      <a href="index.html">web<span>studio</span></a>
       <p>
         Increase the flow of customers and <br />
         sales for your business with digital<br />
