--- a/index.html
+++ b/index.html
@@ -18,8 +18,14 @@
         </ul>
       </nav>
       <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+110001111111;">+11 (000) 111-11-11</a>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+110001111111;">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
       </address>
     </header>
     <main>
@@ -62,11 +68,7 @@
         </ul>
       </section>
       <section>
-        <ul>
-          <li>
-            <h2>What are we doing</h2>
-          </li>
-        </ul>
+        <h2>What are we doing</h2>
         <ul>
           <li>
             <img
@@ -143,8 +145,7 @@
     <footer>
       <a href="index.html">web<span>studio</span></a>
       <p>
-        Increase the flow of customers and <br />
-        sales for your business with digital<br />
+        Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
     </footer>
