--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </section>
 
       <section>
-        <h2>main theses</h2>
+        <h2 hidden>main theses</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
