--- a/index.html
+++ b/index.html
@@ -54,31 +54,31 @@
       </section>
 
       <section>
-        <h2 hidden>main theses</h2>
+        <h2 class="visually-hidden">main theses</h2>
         <ul class="feature-list">
           <li class="feature-item">
-            <h3>Strategy</h3>
+            <h3 class="title-studio">Strategy</h3>
             <p class="paragraph">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li class="feature-item">
-            <h3>Punctuality</h3>
+            <h3 class="title-studio">Punctuality</h3>
             <p class="paragraph">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li class="feature-item">
-            <h3>Diligence</h3>
+            <h3 class="title-studio">Diligence</h3>
             <p class="paragraph">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li class="feature-item">
-            <h3>Technologies</h3>
+            <h3 class="title-studio">Technologies</h3>
             <p class="paragraph">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -116,7 +116,7 @@
         </ul>
       </section>
       <section class="team">
-        <h2>Our Team</h2>
+        <h2 class="team-title">Our Team</h2>
         <ul class="team-list">
           <li class="team-item">
             <img
@@ -125,7 +125,7 @@
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
+            <h3 class="team-name">Mark Guerrero</h3>
             <p class="paragraph">Product Designer</p>
           </li>
           <li class="team-item">
@@ -135,7 +135,7 @@
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
+            <h3 class="team-name">Tom Ford</h3>
             <p class="paragraph">Frontend Developer</p>
           </li>
           <li class="team-item">
@@ -145,7 +145,7 @@
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
+            <h3 class="team-name">Camila Garcia</h3>
             <p class="paragraph">Marketing</p>
           </li>
           <li class="team-item">
@@ -155,7 +155,7 @@
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
+            <h3 class="team-name">Daniel Wilson</h3>
             <p class="paragraph">UI Designer</p>
           </li>
         </ul>
@@ -165,7 +165,7 @@
       <a class="header-logo link footer-logo" href="index.html"
         >web<span class="footer-studio">studio</span></a
       >
-      <p class="paragraf footer-paragraf">
+      <p class="paragraph footer-paragraf">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
