--- a/portfolio.html
+++ b/portfolio.html
@@ -49,135 +49,139 @@
         </ul>
       </address>
     </header>
-    <main>
-      <h1 hidden>Portfolio examples</h1>
-      <ul class="portfolio-list">
-        <li><button class="btn portfolio-btn" type="button">All</button></li>
-        <li>
-          <button class="btn portfolio-btn" type="button">Web Site</button>
-        </li>
-        <li><button class="btn portfolio-btn" type="button">App</button></li>
-        <li><button class="btn portfolio-btn" type="button">Design</button></li>
-        <li>
-          <button class="btn portfolio-btn" type="button">Marketing</button>
-        </li>
-      </ul>
-      <ul class="portfolio-list">
-        <li class="concept">
-          <a class="portfolio-link link" href="">
-            <img
-              src="./images/portfolio/bankingapp.jpg"
-              alt="banking app interface concept photo"
-              width="360"
-              height="300"
-            />
-            <h2>Banking App Interface Concept</h2>
-            <p class="paragraph">App</p>
-          </a>
-        </li>
-        <li class="concept">
-          <a class="portfolio-link link" href="">
-            <img
-              src="./images/portfolio/cashlesspayment.jpg"
-              alt="cashless payment photo"
-              width="360"
-              height="300"
-            />
-            <h2>Cashless Payment</h2>
-            <p class="paragraph">Marketing</p>
-          </a>
-        </li>
-        <li class="concept">
-          <a class="portfolio-link link" href="">
-            <img
-              src="./images/portfolio/meditaionapp.jpg"
-              alt="meditaion app photo"
-              width="360"
-              height="300"
-            />
-            <h2>Meditaion App</h2>
-            <p class="paragraph">App</p>
-          </a>
-        </li>
-        <li class="concept">
-          <a class="portfolio-link link" href="">
-            <img
-              src="./images/portfolio/taxiservice.jpg"
-              alt="taxi service photo"
-              width="360"
-              height="300"
-            />
-            <h2>Taxi Service</h2>
-            <p class="paragraph">Marketing</p>
-          </a>
-        </li>
-        <li class="concept">
-          <a class="portfolio-link link" href="">
-            <img
-              src="./images/portfolio/screenillustrations.jpg"
-              alt="screen illustrations photo"
-              width="360"
-              height="300"
-            />
-            <h2>Screen Illustrations</h2>
-            <p class="paragraph">Design</p>
-          </a>
-        </li>
-        <li class="concept">
-          <a class="portfolio-link link" href="">
-            <img
-              src="./images/portfolio/onlinecourses.jpg"
-              alt="online courses photo"
-              width="360"
-              height="300"
-            />
-            <h2>Online Courses</h2>
-            <p class="paragraph">Marketing</p>
-          </a>
-        </li>
-        <li class="concept">
-          <a class="portfolio-link link" href=""
-            ><img
-              src="./images/portfolio/instagramstories.jpg"
-              alt="instagram stories concept photo"
-              width="360"
-              height="300"
-            />
-            <h2>Instagram Stories Concept</h2>
-            <p class="paragraph">Design</p>
-          </a>
-        </li>
-        <li class="concept">
-          <a class="portfolio-link link" href="">
-            <img
-              src="./images/portfolio/organicfood.jpg"
-              alt="organic food photo"
-              width="360"
-              height="300"
-            />
-            <h2>Organic Food</h2>
-            <p class="paragraph">Web Site</p>
-          </a>
-        </li>
-        <li class="concept">
-          <a class="portfolio-link link" href=""
-            ><img
-              src="./images/portfolio/freshcoffee.jpg"
-              alt="fresh coffee photo"
-              width="360"
-              height="300"
-            />
-            <h2>Fresh Coffee</h2>
-            <p class="paragraph">Web Site</p>
-          </a>
-        </li>
-      </ul>
-    </main>
+    <section>
+      <main>
+        <h1 class="visually-hidden">Portfolio examples</h1>
+        <ul class="portfolio-list">
+          <li><button class="btn portfolio-btn" type="button">All</button></li>
+          <li>
+            <button class="btn portfolio-btn" type="button">Web Site</button>
+          </li>
+          <li><button class="btn portfolio-btn" type="button">App</button></li>
+          <li>
+            <button class="btn portfolio-btn" type="button">Design</button>
+          </li>
+          <li>
+            <button class="btn portfolio-btn" type="button">Marketing</button>
+          </li>
+        </ul>
+        <ul class="portfolio-list">
+          <li class="concept">
+            <a class="portfolio-link link" href="">
+              <img
+                src="./images/portfolio/bankingapp.jpg"
+                alt="banking app interface concept photo"
+                width="360"
+                height="300"
+              />
+              <h2 class="title-studio">Banking App Interface Concept</h2>
+              <p class="paragraph">App</p>
+            </a>
+          </li>
+          <li class="concept">
+            <a class="portfolio-link link" href="">
+              <img
+                src="./images/portfolio/cashlesspayment.jpg"
+                alt="cashless payment photo"
+                width="360"
+                height="300"
+              />
+              <h2 class="title-studio">Cashless Payment</h2>
+              <p class="paragraph">Marketing</p>
+            </a>
+          </li>
+          <li class="concept">
+            <a class="portfolio-link link" href="">
+              <img
+                src="./images/portfolio/meditaionapp.jpg"
+                alt="meditaion app photo"
+                width="360"
+                height="300"
+              />
+              <h2 class="title-studio">Meditaion App</h2>
+              <p class="paragraph">App</p>
+            </a>
+          </li>
+          <li class="concept">
+            <a class="portfolio-link link" href="">
+              <img
+                src="./images/portfolio/taxiservice.jpg"
+                alt="taxi service photo"
+                width="360"
+                height="300"
+              />
+              <h2 class="title-studio">Taxi Service</h2>
+              <p class="paragraph">Marketing</p>
+            </a>
+          </li>
+          <li class="concept">
+            <a class="portfolio-link link" href="">
+              <img
+                src="./images/portfolio/screenillustrations.jpg"
+                alt="screen illustrations photo"
+                width="360"
+                height="300"
+              />
+              <h2 class="title-studio">Screen Illustrations</h2>
+              <p class="paragraph">Design</p>
+            </a>
+          </li>
+          <li class="concept">
+            <a class="portfolio-link link" href="">
+              <img
+                src="./images/portfolio/onlinecourses.jpg"
+                alt="online courses photo"
+                width="360"
+                height="300"
+              />
+              <h2 class="title-studio">Online Courses</h2>
+              <p class="paragraph">Marketing</p>
+            </a>
+          </li>
+          <li class="concept">
+            <a class="portfolio-link link" href=""
+              ><img
+                src="./images/portfolio/instagramstories.jpg"
+                alt="instagram stories concept photo"
+                width="360"
+                height="300"
+              />
+              <h2 class="title-studio">Instagram Stories Concept</h2>
+              <p class="paragraph">Design</p>
+            </a>
+          </li>
+          <li class="concept">
+            <a class="portfolio-link link" href="">
+              <img
+                src="./images/portfolio/organicfood.jpg"
+                alt="organic food photo"
+                width="360"
+                height="300"
+              />
+              <h2 class="title-studio">Organic Food</h2>
+              <p class="paragraph">Web Site</p>
+            </a>
+          </li>
+          <li class="concept">
+            <a class="portfolio-link link" href=""
+              ><img
+                src="./images/portfolio/freshcoffee.jpg"
+                alt="fresh coffee photo"
+                width="360"
+                height="300"
+              />
+              <h2 class="title-studio">Fresh Coffee</h2>
+              <p class="paragraph">Web Site</p>
+            </a>
+          </li>
+        </ul>
+      </main>
+    </section>
     <footer>
       <a class="header-logo link footer-logo" href="index.html"
         >web<span class="footer-studio">studio</span></a
       >
-      <p class="paragraf footer-paragraf">
+      <p class="paragraph footer-paragraf">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
