--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,160 +19,179 @@
   </head>
   <body>
     <header class="header">
-      <nav class="header-nav">
-        <a class="header-logo link" href="./index.html"
-          >web<span class="header-studio">studio</span></a
-        >
-
-        <ul class="header-list">
-          <li class="header-item">
-            <a class="header-link link current" href="./index.html">Studio</a>
-          </li>
-          <li class="header-item">
-            <a class="header-link link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li class="header-item">
-            <a class="header-link link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="address">
-        <ul class="header-list">
-          <li class="header-item">
-            <a class="address-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="header-item">
-            <a class="address-link link" href="tel:+110001111111;"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="header-container container">
+        <nav class="header-nav">
+          <a class="header-logo link" href="./index.html"
+            >web<span class="header-studio">studio</span></a
+          >
+          <ul class="header-list">
+            <li class="header-item">
+              <a class="header-link link current" href="./index.html">Studio</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="address">
+          <ul class="header-list">
+            <li class="header-item">
+              <a class="address-link link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="header-item">
+              <a class="address-link link" href="tel:+110001111111;"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <section class="hero-section">
-        <h1 class="hero-txt">Effective Solutions for Your Business</h1>
-        <button class="btn-hero btn" type="button">Order Service</button>
+        <div class="container">
+          <h1 class="hero-txt">Effective Solutions for Your Business</h1>
+          <button class="btn-hero btn" type="button">Order Service</button>
+        </div>
       </section>
 
-      <section>
-        <h2 class="visually-hidden">main theses</h2>
-        <ul class="feature-list">
-          <li class="feature-item">
-            <h3 class="title-studio">Strategy</h3>
-            <p class="paragraph">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="feature-item">
-            <h3 class="title-studio">Punctuality</h3>
-            <p class="paragraph">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="feature-item">
-            <h3 class="title-studio">Diligence</h3>
-            <p class="paragraph">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="feature-item">
-            <h3 class="title-studio">Technologies</h3>
-            <p class="paragraph">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <section class="main-theses">
+        <div class="container">
+          <h2 class="visually-hidden">main theses</h2>
+          <ul class="feature-list list">
+            <li class="feature-item">
+              <h3 class="title-studio">Strategy</h3>
+              <p class="paragraph">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="feature-item">
+              <h3 class="title-studio">Punctuality</h3>
+              <p class="paragraph">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="feature-item">
+              <h3 class="title-studio">Diligence</h3>
+              <p class="paragraph">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="feature-item">
+              <h3 class="title-studio">Technologies</h3>
+              <p class="paragraph">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="doing">
-        <h2 class="doing-txt">What are we doing</h2>
-        <ul class="doing-list">
-          <li class="doing-item">
-            <img
-              src="./images/rrectangle711.1.jpg"
-              alt="computer"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li class="doing-item">
-            <img
-              src="./images/rrectangle712.2.jpg"
-              alt="cellphone"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li class="doing-item">
-            <img
-              src="./images/rrectangle713.3.jpg"
-              alt="application on a mobile phone"
-              width="360"
-              height="300"
-            />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="doing-txt">What are we doing</h2>
+          <ul class="doing-list">
+            <li class="doing-item">
+              <img
+                src="./images/rrectangle711.1.jpg"
+                alt="computer"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="doing-item">
+              <img
+                src="./images/rrectangle712.2.jpg"
+                alt="cellphone"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="doing-item">
+              <img
+                src="./images/rrectangle713.3.jpg"
+                alt="application on a mobile phone"
+                width="360"
+                height="300"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="team">
-        <h2 class="team-title">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-item">
-            <img
-              src="./images/img1.1.jpg"
-              alt="photo Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Mark Guerrero</h3>
-            <p class="paragraph">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/img2.1.jpg"
-              alt="photo Tom Ford"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Tom Ford</h3>
-            <p class="paragraph">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/img3.1.jpg"
-              alt="photo Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Camila Garcia</h3>
-            <p class="paragraph">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/img4.1.jpg"
-              alt="photo Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Daniel Wilson</h3>
-            <p class="paragraph">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="team-title">Our Team</h2>
+          <ul class="team-list list">
+            <li class="team-item">
+              <img
+                src="./images/img1.1.jpg"
+                alt="photo Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <div class="team-card-container">
+                <h3 class="team-name">Mark Guerrero</h3>
+                <p class="paragraph">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/img2.1.jpg"
+                alt="photo Tom Ford"
+                width="264"
+                height="260"
+              />
+              <div class="team-card-container">
+                <h3 class="team-name">Tom Ford</h3>
+                <p class="paragraph">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/img3.1.jpg"
+                alt="photo Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <div class="team-card-container">
+                <h3 class="team-name">Camila Garcia</h3>
+                <p class="paragraph">Marketing</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/img4.1.jpg"
+                alt="photo Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <div class="team-card-container">
+                <h3 class="team-name">Daniel Wilson</h3>
+                <p class="paragraph">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer>
-      <a class="header-logo link footer-logo" href="index.html"
-        >web<span class="footer-studio">studio</span></a
-      >
-      <p class="paragraph footer-paragraf">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container footer-container">
+        <a class="header-logo link footer-logo" href="index.html"
+          >web<span class="footer-studio">studio</span></a
+        >
+        <p class="paragraph footer-paragraf">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
