--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
         </div>
       </section>
     </main>
-    <footer>
-      <div class="container footer-container">
+    <footer class="footer-container">
+      <div class="container">
         <a class="header-logo link footer-logo" href="index.html"
           >web<span class="footer-studio">studio</span></a
         >
