--- a/portfolio.html
+++ b/portfolio.html
@@ -57,8 +57,8 @@
     <main>
       <section class="portfolio-section">
         <h1 class="visually-hidden">Portfolio examples</h1>
-        <div class="container portfolio-btn-container">
-          <ul class="portfolio-list">
+        <div class="container">
+          <ul class="portfolio-list portfolio-btn-container">
             <li>
               <button class="btn portfolio-btn" type="button">All</button>
             </li>
@@ -75,8 +75,6 @@
               <button class="btn portfolio-btn" type="button">Marketing</button>
             </li>
           </ul>
-        </div>
-        <div class="container">
           <ul class="portfolio-list portf-list card-set">
             <li class="concept card-set-item">
               <a class="portfolio-link link" href="">
