--- a/index.html
+++ b/index.html
@@ -64,30 +64,13 @@
       <section class="main-theses">
         <div class="container">
           <h2 class="visually-hidden">main theses</h2>
-          <ul class="bg-fon-main">
-            <li class="bg-fon">
-              <svg class="icon-main" width="64" height="64">
-                <use href="./images/svg/symbol-defs.svg#icon-antenna"></use>
-              </svg>
-            </li>
-            <li class="bg-fon">
-              <svg class="icon-main" width="64" height="64">
-                <use href="./images/svg/symbol-defs.svg#icon-clock"></use>
-              </svg>
-            </li>
-            <li class="bg-fon">
-              <svg class="icon-main" width="64" height="64">
-                <use href="./images/svg/symbol-defs.svg#icon-diagram"></use>
-              </svg>
-            </li>
-            <li class="bg-fon">
-              <svg class="icon-main" width="64" height="64">
-                <use href="./images/svg/symbol-defs.svg#icon-astronaut"></use>
-              </svg>
-            </li>
-          </ul>
           <ul class="feature-list list">
             <li class="feature-item">
+              <div class="bg-fon">
+                <svg class="icon-main" width="64" height="64">
+                  <use href="./images/svg/symbol-defs.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="title-studio">Strategy</h3>
               <p class="paragraph">
                 Our goal is to identify the business problem to walk away with
@@ -95,6 +78,11 @@
               </p>
             </li>
             <li class="feature-item">
+              <div class="bg-fon">
+                <svg class="icon-main" width="64" height="64">
+                  <use href="./images/svg/symbol-defs.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="title-studio">Punctuality</h3>
               <p class="paragraph">
                 Bring the key message to the brand's audience for the best price
@@ -102,6 +90,11 @@
               </p>
             </li>
             <li class="feature-item">
+              <div class="bg-fon">
+                <svg class="icon-main" width="64" height="64">
+                  <use href="./images/svg/symbol-defs.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="title-studio">Diligence</h3>
               <p class="paragraph">
                 Research and confirm brands that present the strongest digital
@@ -109,6 +102,11 @@
               </p>
             </li>
             <li class="feature-item">
+              <div class="bg-fon">
+                <svg class="icon-main" width="64" height="64">
+                  <use href="./images/svg/symbol-defs.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="title-studio">Technologies</h3>
               <p class="paragraph">
                 Design practice focused on digital experiences. We bring forth a
