--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
       <section class="customers">
         <div class="container">
           <h2 class="customers-txt">Customers</h2>
-          <ul class="customers-list">
+          <ul class="customers-list list">
             <li class="customers-item">
               <a class="customers-link" href="" target="_blank">
                 <svg class="customers-icon" width="104" height="56">
@@ -485,7 +485,7 @@
             <li class="customers-item">
               <a class="customers-link" href="" target="_blank">
                 <svg class="customers-icon" width="104" height="56">
-                  <use href="../images/svg/symbol-defs.svg#icon-logo-4"></use>
+                  <use href="../images/svg/symbol-defs.svg#icon-logo-44"></use>
                 </svg>
               </a>
             </li>
