--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
             <li class="customers-item">
               <a class="customers-link" href="" target="_blank">
                 <svg class="customers-icon" width="104" height="56">
-                  <use href="../images/svg/symbol-defs.svg#icon-logo-44"></use>
+                  <use href="./images/svg/symbol-defs.svg#icon-logo-44"></use>
                 </svg>
               </a>
             </li>
