--- a/portfolio.html
+++ b/portfolio.html
@@ -78,12 +78,19 @@
           <ul class="portfolio-list portf-list card-set">
             <li class="concept card-set-item">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/portfolio/bankingapp.jpg"
-                  alt="banking app interface concept photo"
-                  width="360"
-                  height="300"
-                />
+                <div class="product-thumb">
+                  <img
+                    src="./images/portfolio/bankingapp.jpg"
+                    alt="banking app interface concept photo"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="product-actions">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </div>
+                </div>
                 <div class="wrapper">
                   <h2 class="title-studio">Banking App Interface Concept</h2>
                   <p class="paragraph">App</p>
@@ -92,12 +99,19 @@
             </li>
             <li class="concept card-set-item">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/portfolio/cashlesspayment.jpg"
-                  alt="cashless payment photo"
-                  width="360"
-                  height="300"
-                />
+                <div class="product-thumb">
+                  <img
+                    src="./images/portfolio/cashlesspayment.jpg"
+                    alt="cashless payment photo"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="product-actions">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </div>
+                </div>
                 <div class="wrapper">
                   <h2 class="title-studio">Cashless Payment</h2>
                   <p class="paragraph">Marketing</p>
@@ -106,12 +120,20 @@
             </li>
             <li class="concept card-set-item">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/portfolio/meditaionapp.jpg"
-                  alt="meditaion app photo"
-                  width="360"
-                  height="300"
-                />
+                <div class="product-thumb">
+                  <img
+                    src="./images/portfolio/meditaionapp.jpg"
+                    alt="meditaion app photo"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="product-actions">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </div>
+                </div>
+
                 <div class="wrapper">
                   <h2 class="title-studio">Meditaion App</h2>
                   <p class="paragraph">App</p>
@@ -120,12 +142,19 @@
             </li>
             <li class="concept card-set-item">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/portfolio/taxiservice.jpg"
-                  alt="taxi service photo"
-                  width="360"
-                  height="300"
-                />
+                <div class="product-thumb">
+                  <img
+                    src="./images/portfolio/taxiservice.jpg"
+                    alt="taxi service photo"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="product-actions">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </div>
+                </div>
                 <div class="wrapper">
                   <h2 class="title-studio">Taxi Service</h2>
                   <p class="paragraph">Marketing</p>
@@ -134,12 +163,19 @@
             </li>
             <li class="concept card-set-item">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/portfolio/screenillustrations.jpg"
-                  alt="screen illustrations photo"
-                  width="360"
-                  height="300"
-                />
+                <div class="product-thumb">
+                  <img
+                    src="./images/portfolio/screenillustrations.jpg"
+                    alt="screen illustrations photo"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="product-actions">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </div>
+                </div>
                 <div class="wrapper">
                   <h2 class="title-studio">Screen Illustrations</h2>
                   <p class="paragraph">Design</p>
@@ -148,12 +184,19 @@
             </li>
             <li class="concept card-set-item">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/portfolio/onlinecourses.jpg"
-                  alt="online courses photo"
-                  width="360"
-                  height="300"
-                />
+                <div class="product-thumb">
+                  <img
+                    src="./images/portfolio/onlinecourses.jpg"
+                    alt="online courses photo"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="product-actions">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </div>
+                </div>
                 <div class="wrapper">
                   <h2 class="title-studio">Online Courses</h2>
                   <p class="paragraph">Marketing</p>
@@ -161,13 +204,20 @@
               </a>
             </li>
             <li class="concept card-set-item">
-              <a class="portfolio-link link" href=""
-                ><img
-                  src="./images/portfolio/instagramstories.jpg"
-                  alt="instagram stories concept photo"
-                  width="360"
-                  height="300"
-                />
+              <a class="portfolio-link link" href="">
+                <div class="product-thumb">
+                  <img
+                    src="./images/portfolio/instagramstories.jpg"
+                    alt="instagram stories concept photo"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="product-actions">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </div>
+                </div>
                 <div class="wrapper">
                   <h2 class="title-studio">Instagram Stories Concept</h2>
                   <p class="paragraph">Design</p>
@@ -176,12 +226,19 @@
             </li>
             <li class="concept card-set-item">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/portfolio/organicfood.jpg"
-                  alt="organic food photo"
-                  width="360"
-                  height="300"
-                />
+                <div class="product-thumb">
+                  <img
+                    src="./images/portfolio/organicfood.jpg"
+                    alt="organic food photo"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="product-actions">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </div>
+                </div>
                 <div class="wrapper">
                   <h2 class="title-studio">Organic Food</h2>
                   <p class="paragraph">Web Site</p>
@@ -189,13 +246,21 @@
               </a>
             </li>
             <li class="concept card-set-item">
-              <a class="portfolio-link link" href=""
-                ><img
-                  src="./images/portfolio/freshcoffee.jpg"
-                  alt="fresh coffee photo"
-                  width="360"
-                  height="300"
-                />
+              <a class="portfolio-link link" href="">
+                <div class="product-thumb">
+                  <img
+                    src="./images/portfolio/freshcoffee.jpg"
+                    alt="fresh coffee photo"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="product-actions">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </div>
+                </div>
+
                 <div class="wrapper">
                   <h2 class="title-studio">Fresh Coffee</h2>
                   <p class="paragraph">Web Site</p>
