--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
         <div class="container">
           <div></div>
           <h1 class="hero-txt">Effective Solutions for Your Business</h1>
-          <button class="btn-hero btn" type="button">Order Service</button>
+          <button class="btn-hero btn" type="button" data-modal-open>
+            Order Service
+          </button>
         </div>
       </section>
 
@@ -570,5 +572,16 @@
         </div>
       </div>
     </footer>
+    <!-- modal window -->
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="modal-btn" type="button" data-modal-close>
+          <svg class="modal-btn-svg" width="8" height="8">
+            <use href="./images/svg/symbol-defs.svg#icon-modal-btn-close"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
