--- a/index.html
+++ b/index.html
@@ -570,6 +570,26 @@
             </li>
           </ul>
         </div>
+        <div class="footer-form-div footer">
+          <h2 class="footer-subscribe">Subscribe</h2>
+          <div class="footer-modal-container">
+            <form class="form-footer">
+              <label class="footer-label" for="footer_form"></label>
+              <input
+                class="footer-input"
+                type="email"
+                id="footer_form"
+                placeholder="E-mail"
+              />
+            </form>
+            <button class="footer-btn-form" type="submit">
+              Subscribe
+              <svg class="" width="24" height="24">
+                <use href="./images/svg/symbol-defs.svg#icon-telegram"></use>
+              </svg>
+            </button>
+          </div>
+        </div>
       </div>
     </footer>
     <!-- modal window -->
@@ -580,6 +600,51 @@
             <use href="./images/svg/symbol-defs.svg#icon-modal-btn-close"></use>
           </svg>
         </button>
+        <strong class="modal-title"
+          >Leave your contacts and we will call you back</strong
+        >
+        <form class="modal-form" name="modal_form">
+          <label class="modal-form-label" for="user_name">Name</label>
+          <div class="modal-form-group">
+            <input class="modal-form-field" type="text" id="user_name" />
+            <svg class="modal-form-icon" width="18" height="24">
+              <use href="./images/svg/symbol-defs.svg#icon-person-form"></use>
+            </svg>
+          </div>
+          <label class="modal-form-label" for="user_tel">Phone</label>
+          <div class="modal-form-group">
+            <input class="modal-form-field" type="tel" id="user_tel" />
+            <svg class="modal-form-icon" width="18" height="24">
+              <use href="./images/svg/symbol-defs.svg#icon-phone-form"></use>
+            </svg>
+          </div>
+          <label class="modal-form-label" for="user_email">Email</label>
+          <div class="modal-form-group">
+            <input class="modal-form-field" type="email" id="user_email" />
+            <svg class="modal-form-icon" width="18" height="24">
+              <use href="./images/svg/symbol-defs.svg#icon-email-form"></use>
+            </svg>
+          </div>
+          <label class="modal-form-label" for="user_comment">Comment</label>
+          <textarea
+            class="modal-form-comment"
+            name="user_comment"
+            id="user_comment"
+            rows="6"
+            placeholder="Text input"
+          ></textarea>
+          <label class="modal-form-aggrie">
+            <input class="modal-checkdox" name="user_aggrie" type="checkbox" />
+            <svg class="modal-checkbox-svg" width="14" height="14">
+              <use href="./images/svg/symbol-defs.svg#icon-cheked"></use>
+            </svg>
+            <span class="span-aggrie"
+              >I accept the terms and conditions of the
+              <a href="" class="privacy-pilicy"> Privacy Policy</a></span
+            >
+          </label>
+          <button class="btn-modal" type="submit">Send</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
