--- a/portfolio.html
+++ b/portfolio.html
@@ -339,6 +339,26 @@
             </li>
           </ul>
         </div>
+        <div class="footer-form-div footer">
+          <h2 class="footer-subscribe">Subscribe</h2>
+          <div class="footer-modal-container">
+            <form class="form-footer">
+              <label class="footer-label" for="footer_form"></label>
+              <input
+                class="footer-input"
+                type="email"
+                id="footer_form"
+                placeholder="E-mail"
+              />
+            </form>
+            <button class="footer-btn-form" type="submit">
+              Subscribe
+              <svg class="" width="24" height="24">
+                <use href="./images/svg/symbol-defs.svg#icon-telegram"></use>
+              </svg>
+            </button>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
