--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="header-container container">
         <nav class="header-nav">
           <a class="header-logo link" href="./index.html"
@@ -51,9 +51,9 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
     <main>
-      <section class="hero-section overlay">
+      <!-- <section class="hero-section overlay">
         <div class="container">
           <div></div>
           <h1 class="hero-txt">Effective Solutions for Your Business</h1>
@@ -61,7 +61,7 @@
             Order Service
           </button>
         </div>
-      </section>
+      </section> -->
 
       <section class="main-theses">
         <div class="container">
@@ -149,7 +149,7 @@
           </ul>
         </div>
       </section>
-      <section class="team">
+      <!-- <section class="team">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list list">
@@ -451,8 +451,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="customers">
+      </section> -->
+      <!-- <section class="customers">
         <div class="container">
           <h2 class="customers-txt">Customers</h2>
           <ul class="customers-list list">
@@ -500,9 +500,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
-    <footer class="footer-container">
+    <!-- <footer class="footer-container">
       <div class="container footer-flex">
         <div class="right-footer">
           <a class="header-logo link footer-logo" href="index.html"
@@ -589,7 +589,7 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <!-- modal window -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
