--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
         </div>
       </section> -->
     </main>
-    <!-- <footer class="footer-container">
+    <footer class="footer-container">
       <div class="container footer-flex">
         <div class="right-footer">
           <a class="header-logo link footer-logo" href="index.html"
@@ -589,7 +589,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <!-- modal window -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
