Житуха, я люблю тебе

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <div class="header-container container">
         <nav class="header-nav">
           <a class="header-logo link" href="./index.html"
@@ -37,7 +37,7 @@
           </ul>
         </nav>
         <address class="address">
-          <ul class="header-list">
+          <ul class="header-list address-list">
             <li class="header-item">
               <a class="address-link link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
@@ -50,10 +50,20 @@
             </li>
           </ul>
         </address>
+        <button
+          class="hamburger js-open-menu"
+          type="button"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
+          <svg class="hamburger-btn" width="32" height="22">
+            <use href="./images/svg/symbol-defs.svg#menu"></use>
+          </svg>
+        </button>
       </div>
-    </header> -->
+    </header>
     <main>
-      <!-- <section class="hero-section overlay">
+      <section class="hero-section overlay">
         <div class="container">
           <div></div>
           <h1 class="hero-txt">Effective Solutions for Your Business</h1>
@@ -61,7 +71,7 @@
             Order Service
           </button>
         </div>
-      </section> -->
+      </section>
 
       <section class="main-theses">
         <div class="container">
@@ -149,7 +159,7 @@
           </ul>
         </div>
       </section>
-      <!-- <section class="team">
+      <section class="team">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list list">
@@ -451,8 +461,8 @@
             </li>
           </ul>
         </div>
-      </section> -->
-      <!-- <section class="customers">
+      </section>
+      <section class="customers">
         <div class="container">
           <h2 class="customers-txt">Customers</h2>
           <ul class="customers-list list">
@@ -500,7 +510,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
     <footer class="footer-container">
       <div class="container footer-flex">
@@ -645,6 +655,50 @@
         </form>
       </div>
     </div>
+    <!-- MOBILE-MENU -->
+    <div class="menu-container js-menu-container" id="mobile-menu">
+      <button class="menu-toggle js-close-menu">
+        <svg
+          fill="currentColor"
+          viewBox="0 0 20 20"
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+            clip-rule="evenodd"
+          ></path>
+        </svg>
+      </button>
+
+      <ul class="mobile-menu">
+        <li><a href="./index.html" class="link-mobile link">Studio</a></li>
+        <li>
+          <a href="./portfolio.html" class="link-mobile link">Portfolio</a>
+        </li>
+        <li><a href="./index.html" class="link-mobile link">Contacts</a></li>
+      </ul>
+      <address class="mobile-addres">
+        <ul class="address-mobile">
+          <li>
+            <a class="address-link link tel-mobile" href="tel:+110001111111;"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+          <li>
+            <a
+              class="address-link link mail-mobile"
+              href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+        </ul>
+      </address>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/body-scroll-lock@4.0.0-beta.0/lib/bodyScrollLock.min.js"></script>
+    <script defer src="./js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
   </body>
 </html>
