--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
           </ul>
         </nav>
         <address class="address">
-          <ul class="header-list">
+          <ul class="header-list address-list">
             <li class="header-item">
               <a class="address-link link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
@@ -52,6 +52,11 @@
             </li>
           </ul>
         </address>
+        <button class="hamburger" type="button">
+          <svg class="hamburger-btn" width="32" height="22">
+            <use href="./images/svg/symbol-defs.svg#menu"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <main>
