--- a/index.html
+++ b/index.html
@@ -674,11 +674,15 @@
       </button>
 
       <ul class="mobile-menu">
-        <li><a href="./index.html" class="link-mobile link">Studio</a></li>
-        <li>
+        <li class="mob-item">
+          <a href="./index.html" class="link-mobile link">Studio</a>
+        </li>
+        <li class="mob-item">
           <a href="./portfolio.html" class="link-mobile link">Portfolio</a>
         </li>
-        <li><a href="./index.html" class="link-mobile link">Contacts</a></li>
+        <li class="mob-item">
+          <a href="./index.html" class="link-mobile link">Contacts</a>
+        </li>
       </ul>
       <address class="mobile-addres">
         <ul class="address-mobile">
@@ -696,6 +700,60 @@
           </li>
         </ul>
       </address>
+      <ul class="menu-icons">
+        <li class="menu-icon">
+          <a
+            class="links-team-footer"
+            href="https://www.instagram.com/"
+            rel="noopener noreferrer"
+            aria-label="instagram link"
+            target="_blank"
+          >
+            <svg class="icon-footer" width="24" height="24">
+              <use href="./images/svg/symbol-defs.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="menu-icon">
+          <a
+            class="links-team-footer"
+            href="https://twitter.com/"
+            rel="noopener noreferrer"
+            aria-label="twitter link"
+            target="_blank"
+          >
+            <svg class="icon-footer" width="24" height="24">
+              <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="menu-icon">
+          <a
+            class="links-team-footer"
+            href="https://www.facebook.com/"
+            rel="noopener noreferrer"
+            aria-label="facebook link"
+            target="_blank"
+          >
+            <svg class="icon-footer" width="24" height="24">
+              <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="menu-icon">
+          <a
+            class="links-team-footer"
+            href="https://www.linkedin.com/"
+            rel="noopener noreferrer"
+            aria-label="linkedin link"
+            target="_blank"
+          >
+            <svg class="icon-footer" width="24" height="24">
+              <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/body-scroll-lock@4.0.0-beta.0/lib/bodyScrollLock.min.js"></script>
     <script defer src="./js/mobile-menu.js"></script>
