--- a/index.html
+++ b/index.html
@@ -447,39 +447,39 @@
                   media="(min-width: 1200px)"
                   srcset="
                     ./images/img-camila_desk@1x.jpg 1x,
-                    /images/img-camila_desk@2x.jpg  2x
+                    ./images/img-camila_desk@2x.jpg 2x
                   "
                   type="image/jpeg"
                 />
                 <source
                   media="(min-width: 768px)"
                   srcset="
-                    /images/img-camila_tab@1x.webp 1x,
-                    /images/img-camila_tab@2x.webp 2x
+                    ./images/img-camila_tab@1x.webp 1x,
+                    ./images/img-camila_tab@2x.webp 2x
                   "
                   type="image/webp"
                 />
                 <source
                   media="(min-width: 768px)"
                   srcset="
-                    /images/img-camila_tab@1x.jpg 1x,
-                    /images/img-camila_tab@2x.jpg 2x
+                    ./images/img-camila_tab@1x.jpg 1x,
+                    ./images/img-camila_tab@2x.jpg 2x
                   "
                   type="image/jpeg"
                 />
                 <source
                   media="(max-width: 767px)"
                   srcset="
-                    /images/img-camila_mob@1x.webp 1x,
-                    /images/img-camila_mob@2x.webp 2x
+                    ./images/img-camila_mob@1x.webp 1x,
+                    ./images/img-camila_mob@2x.webp 2x
                   "
                   type="image/webp"
                 />
                 <source
                   media="(max-width: 767px)"
                   srcset="
-                    /images/img-camila_mob@1x.jpg 1x,
-                    /images/img-camila_mob@2x.jpg 2x
+                    ./images/img-camila_mob@1x.jpg 1x,
+                    ./images/img-camila_mob@2x.jpg 2x
                   "
                   type="image/jpeg"
                 />
