--- a/portfolio.html
+++ b/portfolio.html
@@ -476,88 +476,91 @@
           ></path>
         </svg>
       </button>
-
-      <ul class="mobile-menu">
-        <li class="mob-item">
-          <a href="./index.html" class="header-link link-mobile link">Studio</a>
-        </li>
-        <li class="mob-item">
-          <a href="./portfolio.html" class="link-mobile link">Portfolio</a>
-        </li>
-        <li class="mob-item">
-          <a href="./index.html" class="link-mobile link">Contacts</a>
-        </li>
-      </ul>
-      <address class="mobile-addres">
-        <ul class="address-mobile">
-          <li>
-            <a class="address-link link tel-mobile" href="tel:+110001111111;"
-              >+11 (000) 111-11-11</a
+      <div class="fool-width">
+        <ul class="mobile-menu">
+          <li class="mob-item">
+            <a href="./index.html" class="header-link link-mobile link"
+              >Studio</a
             >
           </li>
-          <li>
-            <a
-              class="address-link link mail-mobile"
-              href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+          <li class="mob-item">
+            <a href="./portfolio.html" class="link-mobile link">Portfolio</a>
+          </li>
+          <li class="mob-item">
+            <a href="./index.html" class="link-mobile link">Contacts</a>
           </li>
         </ul>
-      </address>
-      <ul class="menu-icons">
-        <li class="menu-icon">
-          <a
-            class="links-team-footer menu-link"
-            href="https://www.instagram.com/"
-            rel="noopener noreferrer"
-            aria-label="instagram link"
-            target="_blank"
-          >
-            <svg class="icon-footer" width="24" height="24">
-              <use href="./images/svg/symbol-defs.svg#icon-instagram"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="menu-icon">
-          <a
-            class="links-team-footer menu-link"
-            href="https://twitter.com/"
-            rel="noopener noreferrer"
-            aria-label="twitter link"
-            target="_blank"
-          >
-            <svg class="icon-footer" width="24" height="24">
-              <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="menu-icon">
-          <a
-            class="links-team-footer menu-link"
-            href="https://www.facebook.com/"
-            rel="noopener noreferrer"
-            aria-label="facebook link"
-            target="_blank"
-          >
-            <svg class="icon-footer" width="24" height="24">
-              <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="menu-icon">
-          <a
-            class="links-team-footer menu-link"
-            href="https://www.linkedin.com/"
-            rel="noopener noreferrer"
-            aria-label="linkedin link"
-            target="_blank"
-          >
-            <svg class="icon-footer" width="24" height="24">
-              <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
-            </svg>
-          </a>
-        </li>
-      </ul>
+        <address class="mobile-addres">
+          <ul class="address-mobile">
+            <li>
+              <a class="address-link link tel-mobile" href="tel:+110001111111;"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+            <li>
+              <a
+                class="address-link link mail-mobile"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+          </ul>
+        </address>
+        <ul class="menu-icons">
+          <li class="menu-icon">
+            <a
+              class="links-team-footer menu-link"
+              href="https://www.instagram.com/"
+              rel="noopener noreferrer"
+              aria-label="instagram link"
+              target="_blank"
+            >
+              <svg class="icon-footer" width="24" height="24">
+                <use href="./images/svg/symbol-defs.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="menu-icon">
+            <a
+              class="links-team-footer menu-link"
+              href="https://twitter.com/"
+              rel="noopener noreferrer"
+              aria-label="twitter link"
+              target="_blank"
+            >
+              <svg class="icon-footer" width="24" height="24">
+                <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="menu-icon">
+            <a
+              class="links-team-footer menu-link"
+              href="https://www.facebook.com/"
+              rel="noopener noreferrer"
+              aria-label="facebook link"
+              target="_blank"
+            >
+              <svg class="icon-footer" width="24" height="24">
+                <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="menu-icon">
+            <a
+              class="links-team-footer menu-link"
+              href="https://www.linkedin.com/"
+              rel="noopener noreferrer"
+              aria-label="linkedin link"
+              target="_blank"
+            >
+              <svg class="icon-footer" width="24" height="24">
+                <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/body-scroll-lock@4.0.0-beta.0/lib/bodyScrollLock.min.js"></script>
     <script defer src="./js/mobile-menu.js"></script>
